--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1> KUCH TOH GADBAD HAI</h1>
+<h1> KUCH TOH GADBAD HAI DAYA</h1>
 </body>
 </html>
